--- a/profile.css
+++ b/profile.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+/* * * @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
 
 *,
@@ -85,4 +85,4 @@ a{
 li,
 a:hover{
 color: #252424;
-}
+}*****/
